[tool.poetry]
name = "repl_python3_Protobot-1"
version = "0.1.0"
description = ""
authors = ["SravanDhira <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.12.17"
discord = "^1.7.3"
SQLAlchemy = "^1.4.31"
PyNaCl = "^1.5.0"
Flask = "^2.0.2"
quart = "^0.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
